src/styles/EndPopup.css
.blocker {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.5);
}

.end-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.end-popup {
  border-radius: 10px;
  background-color: #a0d3ca;
  padding: 30px 60px;
  text-align: center;
  font-size: 25px;
  animation: grow 0.3s linear 1;
}

.end-text {
  font-size: 32px;
  font-weight: bold;
}

.win-gif,
.lose-gif {
  border-radius: 10px;
  margin: 10px 0px;
}

.win-gif {
  width: 275px;
}

.lose-gif {
  width: 200px;
}

.end-score {
  font-size: 26px;
}

.btns {
  display: flex;
  justify-content: center;
  gap: 10px;
  padding-top: 25px;
}

.btns button {
  font-size: 22px;
  padding: 5px 13px;
  border-radius: 10px;
  border: none;
  background-color: #ffd050;
  box-shadow: 0px 0px 5px #c09c7c;
  font-weight: bold;
  cursor: pointer;
  transition: transform, 0.3s, linear, 0.25s;
}

.btns button:hover {
  filter: brightness(95%);
}

